[package]
name = "fuel-vm"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "cryptocurrencies", "fuel", "fuel-vm"]
license = "BUSL-1.1"
repository = { workspace = true }
description = "FuelVM interpreter."

[dependencies]
anyhow = { version = "1.0", optional = true }
async-trait = "0.1"
backtrace = { version = "0.3", optional = true } # requires debug symbols to work
bitflags = "1"
derivative = "2.2"
dyn-clone = { version = "1.0", optional = true }
ethnum = "1.3"
fuel-asm = { workspace = true }
fuel-crypto = { workspace = true }
fuel-merkle = { workspace = true }
fuel-storage = { workspace = true }
fuel-tx = { workspace = true, features = ["builder", "std"] }
fuel-types = { workspace = true }
itertools = "0.10"
paste = "1.0"
primitive-types = { version = "0.12", default-features = false }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
sha3 = "0.10"
static_assertions = "1.1"
strum = { version = "0.24", features = ["derive"], optional = true }
tai64 = "4.0"
thiserror = "1.0"

[dev-dependencies]
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
fuel-crypto = { workspace = true, features = ["test-helpers"] }
fuel-tx = { workspace = true, features = ["builder"] }
fuel-vm = { path = ".", default-features = false, features = ["test-helpers", "serde", "profile-coverage", "profile-gas"] }
futures = "0.3.28"
num-integer = "0.1.45"
p256 = "0.13"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rayon = "1.7"
rstest = "0.17"
serde_json = "1.0"
test-case = "2.2"
tokio = { version = "1.27", features = ["full"] }
tokio-rayon = "2.1.0"

[features]
default = []
arbitrary = ["fuel-asm/arbitrary"]
debug = []
optimized = []
profile-gas = ["profile-any"]
profile-coverage = ["profile-any"]
profile-any = ["dyn-clone"] # All profiling features should depend on this
random = ["fuel-crypto/random", "fuel-types/random", "fuel-tx/random", "rand"]
serde = ["dep:serde", "fuel-asm/serde", "fuel-types/serde", "fuel-tx/serde"]
test-helpers = ["fuel-tx/builder", "random", "dep:anyhow", "fuel-crypto/test-helpers"]
