[package]
name = "version-compatibility-tests"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false

[dev-dependencies]
fuel-tx-0-58-2 = { package = "fuel-tx", version = "0.58.2", features = ["random", "test-helpers"] }
latest-fuel-tx = { package = "fuel-tx", path = "../fuel-tx", features = ["random", "test-helpers"] }
fuel-compression-0-58-2 = { package = "fuel-compression", version = "0.58.2" }
latest-fuel-compression = { package = "fuel-compression", path = "../fuel-compression" }
postcard = { version = "1.0", features = ["use-std"] }
tokio = { version = "1.27", features = ["full"] }

[features]
default = ["da-compression"]
da-compression = ["fuel-tx-0-58-2/da-compression", "latest-fuel-tx/da-compression"]