[package]
name = "fuel-tx-test-helpers"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
publish = false

[dependencies]
fuel-crypto = { path = "../../fuel-crypto", default-features = false, features = ["random"] }
fuel-tx = { path = "../../fuel-tx", default-features = false, features = ["builder", "random"] }
fuel-types = { path = "../../fuel-types", default-features = false, features = ["random"] }
rand = { version = "0.8", default-features = false }

[features]
default = ["std"]
std = ["fuel-tx/default", "fuel-types/default"]
